--- a/sass/web/button.scss
+++ b/sass/web/button.scss
@@ -79,6 +79,9 @@ $tagArray :('green':#6eb92b,'blue':#1978CF,'red':#ec5369,'black':#171011);
 
 .btn-s{font-size: 13px;}
 
+.more1{
+  color:$mainColor!important;
+}
 .more {
     z-index: 99;
     position: relative;
