--- a/sass/web/tab.scss
+++ b/sass/web/tab.scss
@@ -2,6 +2,24 @@
 @import "../mySassWare/mixin";
 @charset "utf-8";
 
+/*tab10 start*/
+.tab10 li {
+  float: left;
+  display: block;
+  margin-right: 10px;
+}
+.tab10 li a{
+  display: block;
+  padding: 0 10px;
+  border:1px solid #ddd;
+}
+.tab10 .on a{
+  background-color: #df0000;
+  color: #fff;
+  border:1px solid #df0000;
+}
+/*tab10 end*/
+
 /* tab09 start */
 .tab09 {
   $tth:34px;
