--- a/css/content.css
+++ b/css/content.css
@@ -11,6 +11,22 @@
 /* color end */
 /* clearfix*/
 /* 闭合子元素的浮动*/
+.adr1 .row-block {
+  float: left; }
+
+.adr1:before, .adr1 .row-block:before, .adr1:after, .adr1 .row-block:after {
+  content: " ";
+  display: table; }
+
+.adr1:after, .adr1 .row-block:after {
+  clear: both; }
+
+.adr1 .row-block {
+  position: relative; }
+
+.adr1 .row-block {
+  float: left; }
+
 /*frame */
 /*----------------------------------------------------- */
 /* setting scss*/
@@ -24,9 +40,43 @@
 /* color end */
 /* clearfix*/
 /* 闭合子元素的浮动*/
+.adr1 .row-block {
+  float: left; }
+
+.adr1:before, .adr1 .row-block:before, .adr1:after, .adr1 .row-block:after {
+  content: " ";
+  display: table; }
+
+.adr1:after, .adr1 .row-block:after {
+  clear: both; }
+
+.adr1 .row-block {
+  position: relative; }
+
+.adr1 .row-block {
+  float: left; }
+
 /*frame */
 /* input set  start  */
 /* input set  end  */
+.adr1 {
+  margin-left: -6px;
+  margin-right: -6px; }
+  .adr1 .row-block {
+    width: 50%;
+    min-height: 1px; }
+    .adr1 .row-block .inner {
+      padding: 0 6px; }
+  .adr1 .iconfont {
+    color: #006acf;
+    font-size: 18.72px;
+    vertical-align: middle;
+    margin-right: 5px; }
+  .adr1 .ciBlock {
+    background: #f6f6f6;
+    padding: 3px 35px;
+    margin-bottom: 12px; }
+
 /*content1 start*/
 .content1 .p {
   font-weight: 700;
@@ -110,32 +160,6 @@
   text-align: left; }
 
 /*news-list02 end*/
-/*news-list01 start*/
-.news-list01 {
-  max-height: 240px; }
-
-.news-list01 ul {
-  text-align: left; }
-
-.news-list01 li {
-  display: block;
-  height: 33px;
-  line-height: 33px;
-  padding-left: 15px;
-  background: url(../img/iconbg02.png) no-repeat 0 50%; }
-
-.news-list01 li a .text {
-  width: 80%;
-  display: block;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden; }
-
-.news-list01 li a .date {
-  float: right;
-  color: #999; }
-
-/*news-list01 end*/
 /*content01 start*/
 .content01 {
   text-align: left; }
@@ -244,117 +268,6 @@
   text-align: left; }
 
 /*r-article01 end*/
-/*news-ul03 start*/
-.news-ul03 .newsRow {
-  padding: 20px 0px;
-  border-bottom: 1px dashed #ddd; }
-
-.news-ul03 .newsRow:first-child {
-  padding-top: 0px; }
-
-.news-ul03 .newsRow .cl-pic {
-  width: 177px;
-  padding: 3px;
-  text-align: center;
-  height: 125px;
-  line-height: 125px;
-  font-size: 18px; }
-
-.news-ul03 .newsRow .cl-pic img {
-  width: 100%;
-  display: block; }
-
-.news-ul03 .newsRow .cl-newsBox {
-  text-align: left; }
-
-.news-ul03 .newsRow .cl-newsBox .cl-title .cl-p01 {
-  font-weight: 700;
-  width: 80%;
-  line-height: 32px; }
-
-.news-ul03 .newsRow .cl-newsBox .cl-text {
-  height: 88px; }
-
-.news-ul03 .newsRow .cl-newsBox .time {
-  line-height: 32px; }
-
-/*news-ul03 end*/
-/*news-ul02 start*/
-.news-ul02 .newsRow {
-  padding: 20px 0px;
-  border-bottom: 1px dashed #ddd;
-  cursor: pointer; }
-  .news-ul02 .newsRow .button.cl-details {
-    padding: 1px 18px;
-    border: 1px solid #df0000;
-    background: #fff;
-    color: #df0000; }
-
-.news-ul02 .newsRow:first-child {
-  padding-top: 0px; }
-
-.news-ul02 .newsRow .cl-pic {
-  width: 177px;
-  padding: 3px;
-  border: 1px solid #eaeaea; }
-
-.news-ul02 .newsRow .cl-pic img {
-  width: 100%;
-  display: block; }
-
-.news-ul02 .newsRow .cl-newsBox {
-  text-align: left; }
-
-.news-ul02 .newsRow .cl-newsBox .cl-title .cl-p01 {
-  font-weight: 700;
-  width: 80%;
-  line-height: 32px; }
-
-.news-ul02 .newsRow .cl-newsBox .cl-title:hover {
-  color: #df0000; }
-
-.news-ul02 .newsRow .cl-newsBox .cl-text {
-  padding: 3px 0px 10px; }
-
-.news-ul02 .newsRow .button.cl-details:hover {
-  background-color: #df0000;
-  color: #fff; }
-
-/*news-ul02 end*/
-/*news-ul01 start*/
-.news-ul01 .newsRow {
-  padding: 30px 0;
-  border-bottom: 1px dashed #c2c2c2; }
-
-.news-ul01 .newsRow .cl-pic {
-  width: 177px;
-  padding: 3px;
-  border: 1px solid #eaeaea; }
-
-.news-ul01 .newsRow .cl-pic img {
-  width: 100%;
-  display: block; }
-
-.news-ul01 .newsRow .cl-newsBox {
-  text-align: left; }
-
-.news-ul01 .newsRow .cl-newsBox .cl-title .cl-p01 {
-  font-weight: 700;
-  font-size: 13px;
-  line-height: 32px; }
-
-.news-ul01 .newsRow .cl-newsBox .cl-title .cl-line {
-  border-bottom: 1px solid #d5d5d5;
-  width: 60px;
-  min-height: 1px; }
-
-.news-ul01 .newsRow .cl-newsBox .cl-text {
-  padding: 10px 0 5px; }
-
-.news-ul01 .newsRow .cl-newsBox .cl-btn .time {
-  color: #c3c3c3; }
-
-/*news-ul01 start*/
 /*pagination02  start*/
 .pagination02 {
   text-align: center; }
