--- a/css/frame.css
+++ b/css/frame.css
@@ -59,8 +59,16 @@
 /*frame */
 /* input set  start  */
 /* input set  end  */
+.container-1000 {
+  width: 1000px;
+  margin: 0 auto; }
+
 .container-1150 {
   width: 1150px;
+  margin: 0 auto; }
+
+.container-1200 {
+  width: 1200px;
   margin: 0 auto; }
 
 .testFrame > div {
