--- a/sass/mySassWare/frame.scss
+++ b/sass/mySassWare/frame.scss
@@ -8,7 +8,9 @@
     margin:0 auto;
   }
 }
+@include container(1000);
 @include container(1150);
+@include container(1200);
 
 .testFrame{
   &>div{
