--- a/sass/web/header.scss
+++ b/sass/web/header.scss
@@ -2,6 +2,13 @@
 @import "../mySassWare/mixin";
 @charset "utf-8";
 
+.header12{
+  .title{
+    color:$mainColor;
+    font-weight:bold;
+    font-size: $bigSize;
+  }
+}
 
 /*header11 start*/
 .header11{
