--- a/sass/mySassWare/base.scss
+++ b/sass/mySassWare/base.scss
@@ -21,7 +21,7 @@ button:focus{outline: none;}
 img{margin:auto;max-width:100%;};
 /* img{max-height:100%;max-width:100%;max-width:none\9;max-height:none\9;margin:auto;} */
 input{border:none;&:focus{outline:none;}}
-input[type="checkbox"]{outline:none;}
+input[type="checkbox"],textarea:focus{outline:none;}
 
 .disabledLink{
   background: gray!important;
@@ -74,6 +74,7 @@ input[type="checkbox"]{outline:none;}
 .titleColor{color:$titleColor; }
 .white{@extend %white;}
 .i_white{color:#fff!important;}
+.yellow{color:yellow;}
 .blue{color:$mainColor;}
 .light-blue{color:$light-blue;}
 
